traefik/test.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: test
  annotations:
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: test
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: httpd:alpine
        ports:
        - containerPort: 80
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: ingressroutetls
#  namespace: test
#spec:
#  entryPoints:
#    - websecure
#  routes:
#  - match: Host(`test.home.bracloud.fr`)
#    kind: Rule
#    services:
#    - name: nginx
#      port: 80
#  tls:
#    certResolver: letsencrypt
#---
#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: http-to-https-redirect
#  namespace: test
#spec:
#  entryPoints:
#    - web
#  routes:
#    - kind: Rule
#      match: PathPrefix(`/`)
#      priority: 1
#      services:
#        - name: nginx
#          port: 80
#      middlewares:
#        - name: redirect-to-https
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: test
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-redirect
  namespace: test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: test-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: test.home.bracloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ssl
  namespace: test
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: test.home.bracloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
